testing/framework/resources/Advanced/Failing/mondrian/query220.e
USA	39696	1997	24576.0000
USA	\N	1997	39329.0000
USA	22478	1997	2117.0000
USA	33858	1997	35257.0000
USA	21215	1997	25011.0000
USA	23688	1997	21333.0000
USA	20319	1997	26079.0000
USA	30268	1997	23591.0000
USA	27694	1997	41580.0000
USA	28206	1997	2237.0000
USA	23598	1997	25663.0000
